@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2021 the original author or authors.
+ * Copyright 2002-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,7 +19,6 @@ package org.springframework.http.codec.json;
 import java.lang.annotation.Annotation;
 import java.lang.reflect.Type;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
@@ -39,6 +38,7 @@ import org.springframework.core.ResolvableType;
 import org.springframework.core.codec.Hints;
 import org.springframework.http.HttpLogging;
 import org.springframework.http.MediaType;
+import org.springframework.http.ProblemDetail;
 import org.springframework.http.server.reactive.ServerHttpRequest;
 import org.springframework.http.server.reactive.ServerHttpResponse;
 import org.springframework.lang.Nullable;
@@ -48,7 +48,7 @@ import org.springframework.util.MimeType;
 import org.springframework.util.ObjectUtils;
 
 /**
- * Base class providing support methods for Jackson 2.9 encoding and decoding.
+ * Base class providing support methods for Jackson 2.x encoding and decoding.
  *
  * @author Sebastien Deleuze
  * @author Rossen Stoyanchev
@@ -75,16 +75,15 @@ public abstract class Jackson2CodecSupport {
 	private static final String JSON_VIEW_HINT_ERROR =
 			"@JsonView only supported for write hints with exactly 1 class argument: ";
 
-	private static final List<MimeType> DEFAULT_MIME_TYPES = Collections.unmodifiableList(
-			Arrays.asList(
-					MediaType.APPLICATION_JSON,
-					new MediaType("application", "*+json"),
-					MediaType.APPLICATION_NDJSON));
+	private static final List<MimeType> defaultMimeTypes = List.of(
+			MediaType.APPLICATION_JSON,
+			new MediaType("application", "*+json"),
+			MediaType.APPLICATION_NDJSON);
 
 
 	protected final Log logger = HttpLogging.forLogName(getClass());
 
-	private final ObjectMapper defaultObjectMapper;
+	private ObjectMapper defaultObjectMapper;
 
 	@Nullable
 	private Map<Class<?>, Map<MimeType, ObjectMapper>> objectMapperRegistrations;
@@ -98,11 +97,23 @@ public abstract class Jackson2CodecSupport {
 	protected Jackson2CodecSupport(ObjectMapper objectMapper, MimeType... mimeTypes) {
 		Assert.notNull(objectMapper, "ObjectMapper must not be null");
 		this.defaultObjectMapper = objectMapper;
-		this.mimeTypes = !ObjectUtils.isEmpty(mimeTypes) ?
-				Collections.unmodifiableList(Arrays.asList(mimeTypes)) : DEFAULT_MIME_TYPES;
+		this.mimeTypes = (!ObjectUtils.isEmpty(mimeTypes) ? List.of(mimeTypes) : defaultMimeTypes);
 	}
 
 
+	/**
+	 * Configure the default ObjectMapper instance to use.
+	 * @param objectMapper the ObjectMapper instance
+	 * @since 5.3.4
+	 */
+	public void setObjectMapper(ObjectMapper objectMapper) {
+		Assert.notNull(objectMapper, "ObjectMapper must not be null");
+		this.defaultObjectMapper = objectMapper;
+	}
+
+	/**
+	 * Return the {@link #setObjectMapper configured} default ObjectMapper.
+	 */
 	public ObjectMapper getObjectMapper() {
 		return this.defaultObjectMapper;
 	}
@@ -169,7 +180,19 @@ public abstract class Jackson2CodecSupport {
 				result.addAll(entry.getValue().keySet());
 			}
 		}
-		return (CollectionUtils.isEmpty(result) ? getMimeTypes() : result);
+		if (!CollectionUtils.isEmpty(result)) {
+			return result;
+		}
+		return (ProblemDetail.class.isAssignableFrom(elementClass) ? getMediaTypesForProblemDetail() : getMimeTypes());
+	}
+
+	/**
+	 * Return the supported media type(s) for {@link ProblemDetail}.
+	 * By default, an empty list, unless overridden in subclasses.
+	 * @since 6.0.5
+	 */
+	protected List<MimeType> getMediaTypesForProblemDetail() {
+		return Collections.emptyList();
 	}
 
 	protected boolean supportsMimeType(@Nullable MimeType mimeType) {
@@ -218,7 +241,7 @@ public abstract class Jackson2CodecSupport {
 			JsonView annotation = getAnnotation(param, JsonView.class);
 			if (annotation != null) {
 				Class<?>[] classes = annotation.value();
-				Assert.isTrue(classes.length == 1, JSON_VIEW_HINT_ERROR + param);
+				Assert.isTrue(classes.length == 1, () -> JSON_VIEW_HINT_ERROR + param);
 				hints = (hints != null ? hints : new HashMap<>(1));
 				hints.put(JSON_VIEW_HINT, classes[0]);
 			}
@@ -231,7 +254,7 @@ public abstract class Jackson2CodecSupport {
 
 	@Nullable
 	protected MethodParameter getParameter(ResolvableType type) {
-		return (type.getSource() instanceof MethodParameter ? (MethodParameter) type.getSource() : null);
+		return (type.getSource() instanceof MethodParameter methodParameter ? methodParameter : null);
 	}
 
 	@Nullable
